apps/homer/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  namespace: homer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        imagePullPolicy: Always
        image: b4bz/homer
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /www/assets/config.yml
          subPath: config.yml
      volumes:
      - name: config-volume
        configMap:
          name: homer-config
