apps/homer/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: homer
  namespace: homer
spec:
  selector:
    app: homer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
