apps/homer/base/networking.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
  - host: homer.stinkyboi.com
    http:
      paths:
      - backend:
          service:
            name: homer
            port:
              number: 80
